Bug 137826 - "next file" button does not work when used first thing in a new session
Summary: "next file" button does not work when used first thing in a new session
Status: RESOLVED FIXED
Alias: None
Product: kompare
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kompare bugs
URL:
Keywords:
: 137827 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-11-24 15:45 UTC by Marc Haber
Modified: 2012-07-13 14:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Haber 2006-11-24 15:45:16 UTC
Version:           3.4 (using KDE 3.5.5, Debian Package 4:3.5.5a.dfsg.1-5 (4.0))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.18.3-scyw00225

kdesvn can use kompare to display diffs. These are passed to "kompare -o -" on standard input. In these cases, the "next file" button does not react; neither does the "previous" file button.

As soon as one has clicked on a different directory in the "Source Folder" pane, and switched back to the first folder then, the "next file" and "previous file" buttons work.
Comment 1 Otto Bruggeman 2006-11-24 17:38:40 UTC
*** Bug 137827 has been marked as a duplicate of this bug. ***
Comment 2 Otto Bruggeman 2009-03-11 23:24:45 UTC
I'm pretty sure this is fixed by now. Most likely cause was a missing call to updateActions() to update the status of the toolbar buttons.
Comment 3 Jean-Nicolas Artaud 2012-07-13 09:32:53 UTC
SVN commit 1305526 by artaud:

Make the kdesvn diff be loaded like a normal diff file.


REVIEW:6988



 M  +2 -2      komparepart/kompare_part.cpp  
 M  +20 -0     libdiff2/komparemodellist.cpp  
 M  +4 -0      libdiff2/komparemodellist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1305526
Comment 4 Jean-Nicolas Artaud 2012-07-13 14:52:02 UTC
SVN commit 1305542 by artaud:

Make the kdesvn diff be loaded like a normal diff file.


REVIEW:6988

Backport revision 1305526 from trunk.



 M  +2 -2      komparepart/kompare_part.cpp  
 M  +20 -0     libdiff2/komparemodellist.cpp  
 M  +4 -0      libdiff2/komparemodellist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1305542
Comment 5 Jean-Nicolas Artaud 2012-07-13 14:55:43 UTC
SVN commit 1305543 by artaud:

Make the kdesvn diff be loaded like a normal diff file.


REVIEW:6988

Backport revision 1305526 from trunk.



 M  +2 -2      komparepart/kompare_part.cpp  
 M  +20 -0     libdiff2/komparemodellist.cpp  
 M  +4 -0      libdiff2/komparemodellist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1305543