Make the kdesvn diff be loaded like a normal diff file.

BUG:137826

REVIEW:6988


svn path=/trunk/KDE/kdesdk/kompare/; revision=1305526